# ms-thesis

./: .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  install-extensions.sh
assets/urdf/boxer/: boxer.urdf
src/: constraints.py  dynamics_wrapper.py  load_free_flyer.py  mjx_wrapper.py  mppi.py  mppi_planner.py  objective.py  utils.py
tex/: diploma.tex  ref.bib  thesis_proposal.tex
tex/biblio/: bibliography.bib
tex/chapters/: chapter_1.tex  chapter_2.tex  chapter_3.tex  chapter_4.tex  conclusion.tex  introduction.tex
tex/settings/: preamble.tex
